# Nova-Language

./: CMakeLists.txt  Libs.cmake  vcpkg.json
root/app/: CMakeLists.txt
root/app/src/: main.cpp
root/core/: CMakeLists.txt
root/core/include/: compiler.h  core.h  logger.h  lsp.h  manager.h
root/core/src/: compiler.cpp  low_compiler.cpp
test_proj/: README  compile.sh  main  main.ll
test_proj/Nova/: nc.conf
test_proj/src/: main.nl
